# profile.mobile.apps.native.music-player

./: .cproject  .project  .tproject  CMakeLists.txt  LICENSE  WORKSPACE  dump_org.tizen.music-player.sh  org.tizen.music-chooser.manifest  org.tizen.music-player-1.0.0-arm.tpk  org.tizen.music-player-1.0.0-i386.tpk  org.tizen.music-player.efl  org.tizen.music-player.manifest  org.tizen.music-player.xml  project_def.prop  tizen-manifest.xml
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
changeable_GUI/: color_table.xml  font_table.xml
data/: music-player.uri  org.tizen.music-player.desktop.in
inc/: mp-common-defs.h  mp-images.h  mp-resource.h  mp-vconf-private-keys.h
music-chooser/: .cproject  .project  CMakeLists.txt  NOTICE  org.tizen.music-chooser.efl  org.tizen.music-chooser.xml  project_def.prop  tizen-manifest.xml
music-chooser/layout/: HD-inc.edc  genlist_macro.edc  genlist_textblock_style.edc  mc-naviframe.edc  mc-tabbar.edc  music-chooser.edc  toolbar.edc
music-chooser/res/: genlist.edc  genlist_macro.edc  genlist_normal.edc  genlist_textblock_style.edc  toolbar.edc
music-chooser/src/: mc-common.c  mc-group-list.c  mc-group-play-list.c  mc-index.c  mc-library-view.c  mc-list-play.c  mc-search-list.c  mc-search-view.c  mc-search.c  mc-select-view.c  mc-track-list.c  mc-voice-clip-list.c  mc-widget.c  music-chooser.c
music-chooser/src/include/: mc-common.h  mc-data.h  mc-debug.h  mc-group-list.h  mc-group-play-list.h  mc-index.h  mc-library-view.h  mc-list-play.h  mc-search-list.h  mc-search-view.h  mc-search.h  mc-select-view.h  mc-text.h  mc-track-list.h  mc-voice-clip-list.h  mc-widget.h  music-chooser.h
packaging/: org.tizen.music-player.spec
po/: CMakeLists.txt  ar.po  az.po  ca.po  cs.po  da.po  de.po  en.po  en_US.po  eu.po  fr.po  fr_CA.po  gl.po  hr.po  is.po  kk.po  ko_KR.po  lt.po  mk.po  pt_BR.po  sl.po  sv.po  te.po  tr_TR.po  uz.po
res/edje/: entry.edc  mp-button.edc  mp-check.edc  mp-custom-winset-style.edc  mp-defines.h  mp-editfield.edc  mp-fake-effect.edc  mp-genlist-theme.edc  mp-images.edc  mp-info-view.edc  mp-label.edc  mp-list-view.edc  mp-list.edc  mp-lockscreenmini.edc  mp-minicontroller.edc  mp-now-playing.edc  mp-play-info.edc  mp-play-menu.edc  mp-play-option.edc  mp-play-progress.edc  mp-play-view.edc  mp-player-view-landscape.edc  mp-player-view.edc  mp-progressbar.edc  mp-toolbar.edc  mp-view.edc  mp_genlist_macro.edc  search_bar.edc  tizen-hd-inc.edc
res/edje/genlist/: genlist_macro.edc  genlist_textblock_style.edc
res/edje/layout/: edc_image_macro.edc  entry.edc  mp-3d-view.edc  mp-all-view.edc  mp-check.edc  mp-custom-winset-style.edc  mp-defines.h  mp-edit-navi.edc  mp-gengrid-style.edc  mp-images.edc  mp-label.edc  mp-layout-misc.edc  mp-library.edc  mp-lrc.edc  mp-motion-popup.edc  mp-naviframe.edc  mp-no-contents.edc  mp-nocontents.edc  mp-now-playing.edc  mp-play-control.edc  mp-play-mini-app.edc  mp-play-vew-landscape.edc  mp-player-progressbar.edc  (+12 more)
res/po/: bg.po  bn.po  el_GR.po  en_PH.po  es_ES.po  es_US.po  et.po  fi.po  ga.po  gu.po  hi.po  hu.po  hy.po  it_IT.po  ja_JP.po  ka.po  kn.po  lv.po  ml.po  nb.po  nl.po  pl.po  pt_PT.po  ro.po  ru_RU.po  si.po  sk.po  sr.po  ta.po  uk.po  ur.po  zh_CN.po  zh_HK.po  zh_TW.po
service/: CMakeLists.txt
service/include/: mp-service-debug.h  mp-service-square.h  music-service.h
service/src/: mp-service-main.c  mp-service-square.c
sound-player/: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.sound-player.desktop.in  project_def.prop  tizen-manifest.xml
sound-player/src/include/: sp-view-manager.h
sound_player/: CMakeLists.txt
src/: mp-main.c
src/common/: mp-albumart.c  mp-app.c  mp-common.c  mp-db-client.c  mp-edit-callback.c  mp-file-util.c  mp-item.c  mp-media-info.c  mp-menu.c  mp-play.c  mp-recommend.c  mp-ta.c  mp-ug-launch.c  mp-util.c  mp-widget.c
src/core/: mp-avrcp.c  mp-cloud.c  mp-collect-color-sort.c  mp-collect-color.c  mp-context.c  mp-file-tag-info.c  mp-floating-widget-mgr.c  mp-http-mgr.c  mp-inotify.c  mp-language-mgr.c  mp-lyric-mgr.c  mp-music-view-mgr.c  mp-player-control.c  mp-player-drm.c  mp-player-mgr.c  mp-playlist-mgr.c  mp-setting-ctrl.c  mp-streaming-mgr.c  mp-view-mgr.c  mp-voice-control-mgr.c  mp-volume.c  mp-watch-dog.c  mp-wifidirect-mgr.c
src/include/: idebuild.h  mp-define.h  mp-player-debug.h  music.h
src/setting/: CMakeLists.txt
src/setting/layout/: ms-eq-custom-pop.edc  ms-sound-alive.edc
src/setting/src/: ms-auto-off.c  ms-key-ctrl.c  ms-play-speed.c  ms-playlist.c  ms-util.c
src/setting/src/include/: ms-auto-off.h  ms-effect-view.h  ms-eq-view.h  ms-key-ctrl.h  ms-play-speed.h  ms-playlist.h  ms-util.h
src/view/: mp-add-track-view.c  mp-album-booklet-view.c  mp-album-detail-view.c  mp-all-view.c  mp-artist-booklet-view.c  mp-artist-detail-view.c  mp-create-playlist-view.c  mp-detail-view.c  mp-edit-view.c  mp-folder-detail-view.c  mp-folder-view.c  mp-genre-detail-view.c  mp-list-view.c  mp-lyric-view.c  mp-main-view.c  mp-make-offline-view.c  mp-mw-lyric-view.c  mp-now-playing-list-view.c  mp-player-view.c  mp-playlist-detail-view.c  mp-search-view.c  mp-select-track-view.c  mp-set-as-view.c  mp-setting-view.c  mp-square-layout.c  mp-square-playlist-view.c  mp-square-view-new.c  mp-view.c
src/widget/: mp-album-detail-list.c  mp-album-list.c  mp-all-list.c  mp-artist-detail-list.c  mp-artist-list.c  mp-ctxpopup.c  mp-edit-playlist.c  mp-folder-list.c  mp-genre-list.c  mp-index.c  mp-list.c  mp-lockscreenmini.c  mp-lyric.c  mp-mini-player.c  mp-minicontroller.c  mp-notification.c  mp-now-playing-list.c  mp-now-playing.c  mp-player-volume-widget.c  mp-playlist-list.c  mp-popup.c  mp-scroll-page.c  mp-search-list.c  mp-search.c  mp-shortcut.c  mp-smart-event-box.c  mp-square-list.c  mp-track-list.c
widget/: .cproject  .project  CMakeLists.txt  project_def.prop  tizen-manifest.xml
widget/inc/: mp_widget.h  mp_widget_debug.h
widget/include/: mp_widget.h  mp_widget_debug.h
widget/res/: CMakeLists.txt  music_widget.edc
widget/src/: mp-widget-create.c  mp-widget-main.c
(+103 files in other folders)
